Update Swagger and Authetication
