# routes/practitioners.js
@@ -1,13 +1,14 @@
 const express = require('express');
 const router = express.Router();
+const { isAuthenticated } = require('../auth/authenticate');
 const { practitionerValidationRules, validate } = require('../validation/validation-practitioners.js');
 const practitionersController = require('../controllers/practitioners');
 
 router.get('/', practitionersController.getAll);
 router.get('/:id', practitionersController.getSingle);
-router.post('/', practitionerValidationRules(), validate, practitionersController.createPractitioner);
-router.put('/:id', practitionerValidationRules(), validate, practitionersController.updatePractitioner);
-router.delete('/:id', practitionersController.deletePractitioner);
+router.post('/', isAuthenticated, practitionerValidationRules(), validate, practitionersController.createPractitioner);
+router.put('/:id', isAuthenticated, practitionerValidationRules(), validate, practitionersController.updatePractitioner);
+router.delete('/:id', isAuthenticated, practitionersController.deletePractitioner);
 router.get('/zip/:zip', practitionersController.getByZip);
 
 module.exports = router;
